--- a/pharma/static/pharma/css/style.css
+++ b/pharma/static/pharma/css/style.css
@@ -11,6 +11,7 @@ body {
 
 #h1 {
     font-weight: lighter!important;
+    font-size: 100px;
     color: lightgrey;
     margin-left: 5%;
     text-shadow: 5px 5px 5px black;
